--- a/doc/snana_manual.tex
+++ b/doc/snana_manual.tex
@@ -5298,7 +5298,7 @@ and corresponds to the true scatter.
 With true peculiar-velocity value {\tt SIM\_VPEC}, 
 the {\tt VPEC} correction ($\vpec$) in the data file is
 \begin{verbatim}
-    VPEC = -SIM_VPEC + VPEC_ERR*GaussRan  # VPEC_ERR <  GENSIGMA_VPEC
+    VPEC =  SIM_VPEC + VPEC_ERR*GaussRan  # VPEC_ERR <  GENSIGMA_VPEC
     VPEC =  0                             # VPEC_ERR >= GENSIGMA_VPEC
 \end{verbatim}
 %
