--- a/doc/snana_manual.tex
+++ b/doc/snana_manual.tex
@@ -773,6 +773,8 @@ use the following sim-input keys:
   H0:            <value>  # default = 70(SALT2), 65(MLCS)
     or
   HzFUN_FILE:  <fileName>  # non-wCDM:  2 columns with  z  H(z)
+
+  MUSHIFT: <value>       # mag shift for all distances (default=0)
 \end{Verbatim}
 %
 It is recommended to {\it NOT} specify cosmological parameters and thus
@@ -786,6 +788,10 @@ function with 2-columns: $z$ and $H(z)$.
 The $z$-bins need not be uniform; i.e., $\log(z)$-binning. 
 Since some of the cosmology functions integrate from $z=0$, 
 the first map bin must have $z=0$ (sim aborts if not satisfied).
+
+Finally, {\tt MUSHIFT} is not a physical model, but may be useful
+to generate bias-corrections with different {\tt MUSHIFT} values
+in order to interpolate distances in a cosmology fitting program.
 
 % ------------------------------------
    \clearpage
